--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 <meta name="keywords" content="Yinfu FENG, University of Electronic Science and Technology of China (UESTC), Zhejiang University (ZJU)"> 
-<meta name="description" content="Cheng Chen&#39;s home page">
+<meta name="description" content="Yinfu FENG&#39;s home page">
 <meta name="google-site-verification" content="cd6DlTp5XjIDLvTkmG0q4gUyt9c7tAnKCzcdFF9YqhY" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Cheng Chen&#39;s Homepage</title>
